--- a/biografia.html
+++ b/biografia.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>¡Feliz Cumpleaños, Kevin "Zelko" Santana!</h1>
+        <h1>¡Feliz Cumpleaños, Kevin Lowendry de Jesus Santana!</h1>
     </header>
 
     <!-- Nav -->
