--- a/encuesta.html
+++ b/encuesta.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Encuesta sobre Kevin "Zelko" Santana</h1>
+        <h1>Encuesta sobre Kevin Lowendry de Jesus Santana</h1>
     </header>
     <nav>
         <ul>
