--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="inicio.css">
     <title>Proyecto Zelko</title>
-     <link rel="icon" href="Fotos/Logo2.jgp." type="image/x-icon">
+    <link rel="icon" href="Fotos/Logo2.jpg" type="image/jpeg">
 </head>
 <body>
     <header>
