--- a/galeria.html
+++ b/galeria.html
@@ -6,6 +6,7 @@
     <title>Galería de Imágenes</title>
     <link rel="stylesheet" href="galeria.css">
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <link rel="icon" href="Fotos/Logo2.jpg" type="image/jpeg">
 </head>
 <body>
     <header>
