--- a/biografia.html
+++ b/biografia.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="biografia.css">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.0.0/dist/confetti.browser.min.js"></script>
     <script src="biografia.js" defer></script>
+    <link rel="icon" href="Fotos/Logo2.jpg" type="image/jpeg">
 </head>
 <body>
     <!-- Header -->
