--- a/encuesta.html
+++ b/encuesta.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="encuesta.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="encuesta.js" defer></script>
+    <link rel="icon" href="Fotos/Logo2.jpg" type="image/jpeg">
 </head>
 <body>
     <header>
