--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
     <div class="sec" id="sec">
         <h2>Kevin Lowendry de Jesus Santana</h2>
-        <p>Bienvenidos a la página oficial de Kevin Lowendry, también conocido como "Zelko". En este sitio, descubrirás una fuente extensa de información sobre este intrigante personaje, incluyendo sus logros más notables y su influencia en la comunidad. La página ha sido diseñada para proporcionar una visión detallada de su trayectoria y vida personal, destacando de manera especial sus contribuciones y éxitos</p><br>
+        <p>Bienvenidos a la página oficial de Kevin Lowendry, también conocido como "Zelko". En este sitio, descubrirás una fuente extensa de información sobre este intrigante personaje, incluyendo sus logros más notables y su influencia en la comunidad. La página ha sido diseñada para proporcionar una visión detallada de su trayectoria y vida personal, destacando de manera especial sus contribuciones y éxitos.</p><br>
         <p>Además de ser un sitio dedicado a Zelko, esta página también celebra su cumpleaños. Hemos incluido una sección especial de biografía que ofrece una mirada más cercana a su vida y experiencias. La encuesta interactiva te permite probar cuánto conoces sobre Zelko, y la galería de imágenes te ofrece una colección de fotos memorables y momentos importantes de su carrera.</p><br>
         <p>Explora las diferentes secciones de la página, que incluyen la sesión de inicio, biografía, encuesta y galería de imágenes. Disfruta de una experiencia completa con información detallada, contenido interactivo y una presentación visualmente atractiva que resalta los colores y el estilo que caracterizan a Zelko. ¡Esperamos que disfrutes de tu visita y encuentres toda la información que buscas!
         </p>
