--- a/encuesta.html
+++ b/encuesta.html
@@ -54,7 +54,7 @@
             </div>
             <div class="question">
                 <label for="q4">4. ¿Cuál es el color favorito de Zelko?</label>
-                <select id="q4" name="q4" data-correct="Morado y Negro" required>
+                <select id="q4" name="q4" data-correct="morado" required>
                     <option value="">Selecciona una opción</option>
                     <option value="rojo">Rojo y Blanco</option>
                     <option value="azul">Azul y Marron</option>
